--- a/presentation/src/main/res/layout/fragment_superhero_details.xml
+++ b/presentation/src/main/res/layout/fragment_superhero_details.xml
@@ -1,10 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/big_margin"
     tools:context=".superheroes.SuperheroDetailsFragment">
 
+    <TextView
+        android:id="@+id/superhero_details_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/standard_margin"
+        android:gravity="center"
+        android:singleLine="true"
+        android:textColor="@color/black"
+        android:textSize="@dimen/big_text_size"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Captain America" />
+
+    <ImageView
+        android:id="@+id/superhero_details_image"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/superhero_card_image_height"
+        android:scaleType="centerInside"
+        android:layout_marginVertical="@dimen/standard_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/superhero_details_name"
+        tools:src="@drawable/captain_america" />
+
+    <TextView
+        android:id="@+id/superhero_details_description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/standard_margin"
+        android:textColor="@color/black"
+        android:textSize="@dimen/standard_text_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/superhero_details_image"
+        tools:text="This is the description of the character, that of course can be longer than 1 line." />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
