--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="standard_margin">8dp</dimen>
+    <dimen name="big_margin">20dp</dimen>
     <dimen name="standard_text_size">18sp</dimen>
+    <dimen name="big_text_size">25sp</dimen>
     <dimen name="superhero_card_image_height">172dp</dimen>
 </resources>
